# cmake_project

./: CMakeLists.txt
.github/workflows/: ci.yml
TC377/: CMakeLists.txt  cpu0.cpp  cpu1.cpp  cpu2.cpp
features/features1/: CMakeLists.txt
features/features1/inc/: feature1.h
features/features1/src/: feature1.cpp
miniapp/miniapp1/: CMakeLists.txt
miniapp/miniapp1/inc/: miniapp1.h
miniapp/miniapp1/src/: miniapp1.cpp
